--- a/1/home_tacks/3.html
+++ b/1/home_tacks/3.html
@@ -30,7 +30,37 @@ console.log(3 - 4 * 2);
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  /*
+  Операции выполняются последовательно:
+  1. Складываем два числа 10 + 10 получаем 20
+  2. Складываем число 20 и строку 10. Это конкатенация. Получаем 2010
+  */
+  console.log(10 + 10 + "10");
+  /*
+  Операции выполняются последовательно:
+  1. Складываем число 10 и строку 10. Это конкатенация. Получаем 1010
+  2. Складываем строку 1010 и число 10. Это конкатенация. Получаем 101010
+  */
+  console.log(10 + "10" + 10);
+  /*
+  Операции выполняются последовательно:
+  1. Складываем два числа 10 + 10 получаем 20
+  2. Унарный оператор + преобразует строку "10" в число, т.е. имее сложение
+  двух чисел 20 + 10 получаем 30
+  */
+  console.log(10 + 10 + +"10");
+  /*
+  1. Оператор - преобразует пустую строку в  -0
+  2. Деление на 0, это бесконечность. В JS есть  - 0, соответственно 10 / -0
+  это минус бесконечность, т.е -Infinity
+  */
+  console.log(10 / -"");
+  /*
+  1. Оператор + пытается преобразовать строку "2,5" в число, но из-за запятой 
+  в  строке получаем Nan
+  2. Любые операции с NaN приводят к NaN
+  */
+  console.log(10 / +"2,5");
 </script>
 </body>
 </html>
