--- a/1/home_tacks/1.html
+++ b/1/home_tacks/1.html
@@ -22,7 +22,9 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  const temperatureC = +prompt('Введите температру в градусах Цельсия');
+  const temperatureF = (9 /5) * temperatureC + 32;
+  alert(`Цельсий: ${temperatureC}, Фаренгейт: ${temperatureF.toFixed(1)}`);
 </script>
 </body>
 </html>
