--- a/2/home_tacks/1.html
+++ b/2/home_tacks/1.html
@@ -20,25 +20,41 @@
   let a = 1, b = 1, c, d;
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  Это операция преинкремента. Сначала а увеличивается на 1, 
+  потом операция присваивания
+  Равносильно следующей записи:
+  a = a + 1; //a = 2
+  c = a; c = 2
    */
   c = ++a;
   console.log(c);
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
-   */
+  Это операция постинкремента. Сначала операция присваивания, 
+  потом а увеличивается на 1
+  Равносильно следующей записи:
+  d = b; //d = 1
+  b = b + 1; // b = 2   
+  */
   d = b++;
   console.log(d);
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
-   */
+  Смотрим таблицу приоритетов операций
+  Сначала выполняется операция преинкремента, потом сложение.
+  Равносильно следующей записи:
+  a = a + 1; // a = 3
+  c = 2 + a; // c = 5
+  */
   c = 2 + ++a;
   console.log(c);
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
+  Смотрим таблицу приоритетов операций
+  
+  Равносильно следующей записи:
+  d = 2 + b; // d = 4
+  b = b + 1; // b = 3
    */
   d = 2 + b++;
   console.log(d);
