--- a/2/home_tacks/2.html
+++ b/2/home_tacks/2.html
@@ -21,7 +21,12 @@
   let x = 1 + (a *= 2);
 
   /*
-  Ваш комментарий, почему переменные `x` и `a` хранят данные значения?
+  Cмотрим таблицу с приоритетом операций
+  Первыми выполняются действия в скобках
+  Выражение в скобках равносильно следующему выражению
+  a = a * 2; // a = 4
+  Далее выполняем сложение
+  x = 1 + a; // x = 5
    */
   console.log(x);
   console.log(a);
