--- a/2/home_tacks/3.html
+++ b/2/home_tacks/3.html
@@ -21,7 +21,21 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  const a = +prompt('Введите число a:');
+  const b = +prompt('Введите число b:');
+ 
+  if (a > 0 && b > 0){
+    const resultOperation = a - b;
+    console.log(resultOperation);
+  }
+  else if (a < 0 && b < 0){
+    const resultOperation = a * b;
+    console.log(resultOperation);
+  }
+  else if (a * b < 0){
+    const resultOperation = a + b;
+    console.log(resultOperation);
+  }
 </script>
 </body>
 </html>
