--- a/3/home_tacks/6.html
+++ b/3/home_tacks/6.html
@@ -24,8 +24,12 @@ xxxxx
 -->
 <script>
   "use strict";
-
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  
+  let step = '';
+  for (let i = 0; i < 20; i++) {
+    step += 'x';
+    console.log(step);
+  }
 </script>
 </body>
 </html>
