--- a/4/home_tacks/1.html
+++ b/4/home_tacks/1.html
@@ -19,8 +19,43 @@
 -->
 <script>
   "use strict";
+  function ProductES5 (name, price) {
+    this.name =  name;
+    this.price = price;
+  }
+  ProductES5.prototype.make25Discount = function(){
+    this.price *=0.75;
+  }
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  const product1 =  new ProductES5 ('Помидор', 400);
+  //Выводим информацию об объекте
+  console.log(product1.name);
+  console.log(product1.price);
+  //Выполняем метод по снижению цены
+  product1.make25Discount();
+  //Вновь выводим информацию о цене
+  console.log(product1.price);
+
+
+  class ProductES6{
+    constructor(name, price){
+      this.name =  name;
+      this.price = price;
+    }
+    make25Discount =  function(){
+      this.price *=0.75;
+    }
+  }
+
+  const product2 =  new ProductES6 ('Огурец', 300);
+  //Выводим информацию об объекте
+  console.log(product2.name);
+  console.log(product2.price);
+  //Выполняем метод по снижению цены
+  product2.make25Discount();
+  //Вновь выводим информацию о цене
+  console.log(product2.price);
+
 </script>
 </body>
 </html>
