--- a/5/home_tacks/3.html
+++ b/5/home_tacks/3.html
@@ -56,13 +56,15 @@
   1. Необходимо вывести сообщение в консоль "все теги прогрузились", когда все
   теги будут созданы браузером.
   */
-
+  document.addEventListener('DOMContentLoaded', 
+  ()=> console.log('все теги прогрузились'))
 
   /*
   2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
   ресурсы страницы будут загружены.
   */
-
+  window.addEventListener('load', 
+  ()=> console.log('страница загрузилась'))
 
   /*
   3. При клике на какой-либо тег на странице в консоль должно выводиться
@@ -73,14 +75,21 @@
   которому был совершен клик.
   Необходимо использовать делегирование.
   */
-
+  document.addEventListener('click', event =>{
+    const classListTarger = event.target.classList;
+    const isAssistClass = event.target.classList.contains('super_element')?
+    'присутствует': 'отсутствует';
+    console.log(`Класс ${classListTarger} ${isAssistClass} 
+    в элементе ${event.target.tagName.toLowerCase()}`);
+  });
 
   /*
   4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
   "Вы навели на textarea."
    */
-
-
+   document.querySelector('textarea')
+   .addEventListener('mouseover',() => console.log("Вы навели на textarea."));
+  
   /*
   5. Необходимо повесить событие клика на тег ul. В обработчике события в
   консоль необходимо выводить текст, который записан внутри элемента кнопки,
@@ -88,19 +97,29 @@
   Если клик был не по кнопке, то ничего выводить не нужно.
   Необходимо использовать делегирование.
    */
-
+  document.querySelector('ul').addEventListener('click', (event =>{
+   if(event.target.tagName == 'BUTTON'){
+     console.log(event.target.textContent);
+   }
+  }));
 
   /*
   6. Вопрос: Почему в console.log пишется сначала текст из 5 задания и только
   потом выводится текст из 3 задания, если мы кликаем по кнопкам в ul?
   Ответ необходимо написать здесь же, под этим комментарием, своими словами.
   */
-
+   /*
+   Все из-за того, что события повешены на разные элементы и используется 
+   механизм погружения (от ребенка к родителю).
+   В итоге первым отрабатывает событие на элементе, который глубже
+   */
 
   /*
   7. С помощью JS необходимо изменить цвет заднего фона каждого второго тега li.
    */
-
+   document
+    .querySelectorAll('li:nth-child(2n)')
+    .forEach(el => el.style.backgroundColor = 'green');
 </script>
 </body>
 </html>
